--- a/midi.html
+++ b/midi.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="https://www.acgmuse.com/assets/forum-b23888be.css">
     <script src="./je.js"></script>
+    <script src="./midi.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         .parent {
